Fuel Quote Truely finished

--- a/FuelHistory.html
+++ b/FuelHistory.html
@@ -14,13 +14,14 @@
   <!-- Our stylesheet -->
   <link rel="stylesheet" href="styles/style.css">
 
-  <title>NAME | Create Your Account</title>
+  <title>NAME | Fuel Quote History</title>
 </head>
 
 <body>
   <div class="container" id="main">
 
-    <h1>Create Your Account</h1>
+    <h1>Fuel Quote History</h1>
+
 
     <table class="table table-bordered">
         <thead>
@@ -60,7 +61,13 @@
           </tr>
         </tbody>
       </table>
+      <form>
+        <div class="form-group">
+        <button type="submit" class="btn btn-primary" style="float: left;">Go Back To fuel Calculator</button>
+        <button type="submit" class="btn btn-primary" style="float: right;">Log Out</button>
 
+      </form>
+    </div>
   </div>
 
 
