--- a/FuelHistory.html
+++ b/FuelHistory.html
@@ -61,6 +61,7 @@
           </tr>
         </tbody>
       </table>
+<div class="container" id="login-section">
       <form>
         <div class="form-group">
         <button type="submit" class="btn btn-primary" style="float: left;">Go Back To fuel Calculator</button>
@@ -68,6 +69,7 @@
 
       </form>
     </div>
+  </div>
   </div>
 
 
