--- a/FuelHistory.html
+++ b/FuelHistory.html
@@ -65,7 +65,7 @@
       <form>
         <div class="form-group">
         <button type="submit" class="btn btn-primary" style="float: left;">Go Back To fuel Calculator</button>
-        <button type="submit" class="btn btn-primary" style="float: right;">Log Out</button>
+        <button type="submit" class="btn btn-secondary" style="float: right;">Log Out</button>
 
       </form>
     </div>
