Added Arrow to go back

--- a/FuelHistory.html
+++ b/FuelHistory.html
@@ -64,7 +64,7 @@
 <div class="container" id="login-section">
       <form>
         <div class="form-group">
-        <button type="submit" class="btn btn-primary" style="float: left;">Go Back To fuel Calculator</button>
+        <button type="submit" class="btn btn-primary" style="float: left;"> < Go Back To fuel Calculator</button>
         <button type="submit" class="btn btn-secondary" style="float: right;">Log Out</button>
 
       </form>
