--- a/FuelCalc.html
+++ b/FuelCalc.html
@@ -30,6 +30,13 @@
       <p> Select Delivery Date</p>
       <input class="form-control" type="text">
 
+      <p>Delivery Address</p>
+      <input class="form-control" type="text">
+
+      <p> Suggested Price</p>
+      <input class="form-control" type="text">
+
+
       <button class="btn btn-success" type="button">Calculate </button>
 
       <h1 style="margin-top: 25px"> Total Amount Due: </h1>
