--- a/FuelCalc.html
+++ b/FuelCalc.html
@@ -31,10 +31,10 @@
       <input class="form-control" type="text">
 
       <p>Delivery Address</p>
-      <input class="form-control" type="text">
+      <input class="form-control" type="text"><small>Cannot be edited</small>
 
       <p> Suggested Price</p>
-      <input class="form-control" type="text">
+      <input class="form-control" type="text"><small>Cannot be edited</small><br>
 
 
       <button class="btn btn-success" type="button">Calculate </button>
